@@ -62,6 +62,8 @@ Release 0.91.0 - Unreleased
                on OOME
    HBASE-1960  Master should wait for DFS to come up when creating
                hbase.version; use alternate strategy for waiting for DNs
+   HBASE-3612  HBaseAdmin::isTableAvailable returns true when the table does
+               not exit
 
   IMPROVEMENTS
    HBASE-3290  Max Compaction Size (Nicolas Spiegelberg via Stack)  
